tests/destructuring/destructuring.exp
Error -------------------------------------------------------- array_rest.js:7:2

Cannot cast `a` to undefined because number [1] is incompatible with
undefined [2].


Error -------------------------------------------------------- array_rest.js:8:2

Cannot cast `b` to undefined because string [1] is incompatible with
undefined [2].


Error -------------------------------------------------------- array_rest.js:9:2

Cannot cast `c` to undefined because boolean [1] is incompatible with
undefined [2].


Error ------------------------------------------------------- array_rest.js:10:2

Cannot cast `d` to undefined because:
 - boolean [1] is incompatible with undefined [2].
 - number [3] is incompatible with undefined [2].
 - string [4] is incompatible with undefined [2].


Error ------------------------------------------------------- array_rest.js:12:6

number [1] is not an array.


Error ---------------------------------------------------------- computed.js:2:2

Cannot cast `val1` to undefined because string [1] is incompatible with
undefined [2].


Error ---------------------------------------------------------- computed.js:9:2

Cannot cast `spread.key` to undefined because string [1] is incompatible with
undefined [2].


Error ---------------------------------------------------------- defaults.js:9:4

Cannot cast `q` to undefined because:
 - boolean [1] is incompatible with undefined [2].
 - null [3] is incompatible with undefined [2].
 - null [4] is incompatible with undefined [2].
 - number [5] is incompatible with undefined [2].
 - string [6] is incompatible with undefined [2].


Error --------------------------------------------------------- defaults.js:23:4

Cannot cast `q` to undefined because:
 - boolean [1] is incompatible with undefined [2].
 - null [3] is incompatible with undefined [2].
 - null [4] is incompatible with undefined [2].
 - number [5] is incompatible with undefined [2].
 - string [6] is incompatible with undefined [2].


Error --------------------------------------------------------- defaults.js:35:4

Cannot cast `o.r` to undefined because:
 - null [1] is incompatible with undefined [2].
 - number [3] is incompatible with undefined [2].
 - string [4] is incompatible with undefined [2].


Error --------------------------------------------------------- defaults.js:43:3

number [1] is incompatible with string [2].


Error --------------------------------------------------------- defaults.js:43:7

boolean [1] is incompatible with string [2].


Error --------------------------------------------------------- defaults.js:49:4

Cannot cast `p` to undefined because string [1] is incompatible with
undefined [2].


Error --------------------------------------------------------- defaults.js:53:3

Cannot assign `{...}.p` to `p` because boolean [1] is incompatible with
string [2].


Error --------------------------------------------------------- defaults.js:57:6

Cannot assign object literal to variable because in property `p`, number [1] is
incompatible with string [2].


Error --------------------------------------------------------- defaults.js:59:2

Cannot cast `p` to undefined because string [1] is incompatible with
undefined [2].


Error -------------------------------------------------------- defaults.js:61:24

Property `x` is missing in null [1].


Error -------------------------------------------------------- defaults.js:62:24

number [1] is not an object.


Error -------------------------------------------------------- defaults.js:63:24

An indexer property is missing in null [1].


Error -------------------------------------------------------- defaults.js:64:24

null [1] is not an array.


Error -------------------------------------------------------- defaults.js:75:24

number [1] is incompatible with string [2].


Error -------------------------------------------------------- defaults.js:76:26

number [1] is incompatible with string [2].


Error: defaults.js:77
 77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                              ^ boolean. This type is incompatible with
 77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                              ^ union: number | string
  Member 1:
   77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                                ^ number
  Error:
   77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                                ^ boolean. This type is incompatible with
   77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                                ^ number
  Member 2:
   77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                                ^ string
  Error:
   77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                                ^ boolean. This type is incompatible with
   77: function obj_prop_union({p}:{p:number|string}={p:true}) {}
                                ^ string

Error -------------------------------------------------------- defaults.js:80:27

boolean [1] is incompatible with number [2].


Error -------------------------------------------------------- defaults.js:80:27

string [1] is incompatible with number [2].


Error ----------------------------------------------------- destructuring.js:4:3

Cannot assign `[...][0].a1` to `a` because number [1] is incompatible with
string [2].


Error ----------------------------------------------------- destructuring.js:4:9

Cannot assign `[...][0].b` to `b` because number [1] is incompatible with
string [2].


Error ---------------------------------------------------- destructuring.js:4:12

Cannot assign `[...][1]` to `c` because number [1] is incompatible with
string [2].


Error ---------------------------------------------------- destructuring.js:10:6

Unsupported expression pattern in destructuring.


Error ---------------------------------------------------- destructuring.js:11:2

Unsupported expression pattern in destructuring.


Error ---------------------------------------------------- destructuring.js:14:9

Cannot assign `p` to `a` because number [1] is incompatible with string [2].


Error ---------------------------------------------------- destructuring.js:15:9

Cannot resolve name `z`.


Error ---------------------------------------------------- destructuring.js:16:9

Cannot assign `r` to `c` because number [1] is incompatible with string [2].


Error ---------------------------------------------------- destructuring.js:20:2

Cannot assign `[...][0]` to `a` because number [1] is incompatible with
string [2].


Error ---------------------------------------------------- destructuring.js:20:5

Cannot assign `[...][2]` to `b` because boolean [1] is incompatible with
string [2].


Error --------------------------------------------------- destructuring.js:20:15

Cannot assign array literal to `c` because `c` [1] is incompatible with
string [2].


Error --------------------------------------------------- destructuring.js:23:37

Cannot assign `z` to `o` because property `x` is missing in `z` [1] but exists
in object type [2].


Error --------------------------------------------------- destructuring.js:28:48

Cannot assign object literal to `extend` because property `z` is missing in
object literal [1] but exists in object type [2].


Error ---------------------------------------------------- destructuring.js:31:8

Cannot call `qux` with object literal bound to `_` because in property `a`,
string [1] is incompatible with number [2].


Error --------------------------------------------------- destructuring.js:33:10

Cannot call `corge` with object literal bound to the first parameter because in
property `b`, number [1] is incompatible with string [2].


Error --------------------------------------------------- destructuring.js:35:27

Cannot assign object literal to variable because in property `n`, string [1] is
incompatible with number [2].


Error ---------------------------------------------------- destructuring.js:38:8

Property `foo` is missing in object literal [1].


Error --------------------------------------------------- destructuring.js:39:13

Property `baz` is missing in object literal [1].


Error ---------------------------------------------------- destructuring.js:45:6

Cannot get `x.baz` because property `baz` is missing in object literal [1].


Error ---------------------------------------------------- destructuring.js:46:9

Cannot get `rest.baz` because property `baz` is missing in `rest` [1].


Error --------------------------------------------------- destructuring.js:64:23

Cannot assign `baseprop1` to `bp1_err` because number [1] is incompatible with
string [2].


Error --------------------------------------------------- destructuring.js:66:23

Cannot assign `others.baseprop2` to `bp2_err` because number [1] is incompatible
with string [2].


Error --------------------------------------------------- destructuring.js:69:23

Cannot assign `childprop1` to `cp1_err` because number [1] is incompatible with
string [2].


Error --------------------------------------------------- destructuring.js:71:23

Cannot assign `others.childprop2` to `cp2_err` because number [1] is
incompatible with string [2].


Error ------------------------------------------------ destructuring_init.js:1:5

Destructuring assignment must be initialized


Error ---------------------------------------------- destructuring_param.js:5:17

Strict mode function may not have duplicate parameter names


Error ------------------------------------------------------------- eager.js:2:3

Property `x` is missing in null [1].


Error ------------------------------------------------------- object_rest.js:5:9

Cannot assign `0` to `o1_rest.x` because property `x` is missing in
`o1_rest` [1].


Error ------------------------------------------------------ object_rest.js:11:9

Cannot assign `0` to `o2_rest.x` because property `x` is missing in
`o2_rest` [1].


Error ------------------------------------------------------ object_rest.js:16:9

Cannot assign `0` to `o3_rest.x` because property `x` is missing in
`o3_rest` [1].


Error -------------------------------------------------------- string_lit.js:2:2

Cannot cast `val` to undefined because string [1] is incompatible with
undefined [2].


Error ------------------------------------------------------- unannotated.js:8:5

Cannot get `x.bar` because property `bar` is missing in object literal [1].



Found 69 errors
